configureCollectionBalancing does not properly reset chunk size of session collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2022-08-08
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In  SERVER-66078 we change the default chunk size for session collection to be 200KiB so when we call configureCollectionBalancing with chunkSize = 0 the command should reset the chunk size value of the session collection to its default value 200KiB but actually sets it to the default global value of 128MiB

            Assignee:
            Paolo Polato
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: