SERVER-67899 fix the logic to reset the maxChunkSize param for the config.system.sessions collection