src/mongo/db/s/config/sharding_catalog_manager.h
@@ -427,6 +427,13 @@ public:
                                       boost::optional<bool> enableAutoSplitter);
 
     /**
+     * Removes the maxChunkSize constraint from config.system.collection to ensure compatibility
+     * with the balancing strategy implemented in v6.1.
+     * TODO SERVER-65332 remove the function once 6.1 branches out.
+     */
+    void applyLegacyConfigurationToSessionsCollection(OperationContext* opCtx);
+
+    /**
      * Updates the granularity value of a time-series collection. Also bumps the shard versions for
      * all shards.
      */
