src/mongo/db/s/config/sharding_catalog_manager_collection_operations.cpp
@@ -69,6 +69,7 @@
 #include "mongo/s/catalog/sharding_catalog_client_impl.h"
 #include "mongo/s/catalog/type_collection.h"
 #include "mongo/s/catalog/type_tags.h"
+#include "mongo/s/chunk_constraints.h"
 #include "mongo/s/client/shard.h"
 #include "mongo/s/client/shard_registry.h"
 #include "mongo/s/grid.h"
@@ -494,8 +495,8 @@ void ShardingCatalogManager::configureCollectionBalancing(
 
     short updatedFields = 0;
     BSONObjBuilder updateCmd;
+    BSONObjBuilder setClauseBuilder;
     {
-        BSONObjBuilder setBuilder(updateCmd.subobjStart("$set"));
         if (chunkSizeMB && *chunkSizeMB != 0) {
             auto chunkSizeBytes = static_cast<int64_t>(*chunkSizeMB) * 1024 * 1024;
             bool withinRange = nss == NamespaceString::kLogicalSessionsNamespace
@@ -504,14 +505,14 @@ void ShardingCatalogManager::configureCollectionBalancing(
             uassert(ErrorCodes::InvalidOptions,
                     str::stream() << "Chunk size '" << *chunkSizeMB << "' out of range [1MB, 1GB]",
                     withinRange);
-            setBuilder.append(CollectionType::kMaxChunkSizeBytesFieldName, chunkSizeBytes);
+            setClauseBuilder.append(CollectionType::kMaxChunkSizeBytesFieldName, chunkSizeBytes);
             updatedFields++;
         }
         if (defragmentCollection) {
             bool doDefragmentation = defragmentCollection.value();
             if (doDefragmentation) {
-                setBuilder.append(CollectionType::kDefragmentCollectionFieldName,
-                                  doDefragmentation);
+                setClauseBuilder.append(CollectionType::kDefragmentCollectionFieldName,
+                                        doDefragmentation);
                 updatedFields++;
             } else {
                 Balancer::get(opCtx)->abortCollectionDefragmentation(opCtx, nss);
@@ -519,13 +520,20 @@ void ShardingCatalogManager::configureCollectionBalancing(
         }
         if (enableAutoSplitter) {
             bool doSplit = enableAutoSplitter.value();
-            setBuilder.append(CollectionType::kNoAutoSplitFieldName, !doSplit);
+            setClauseBuilder.append(CollectionType::kNoAutoSplitFieldName, !doSplit);
             updatedFields++;
         }
     }
     if (chunkSizeMB && *chunkSizeMB == 0) {
-        BSONObjBuilder unsetBuilder(updateCmd.subobjStart("$unset"));
-        unsetBuilder.append(CollectionType::kMaxChunkSizeBytesFieldName, 0);
+        // Logic to reset the 'maxChunkSizeBytes' field to its default value
+        if (nss == NamespaceString::kLogicalSessionsNamespace) {
+            setClauseBuilder.append(CollectionType::kMaxChunkSizeBytesFieldName,
+                                    logical_sessions::kMaxChunkSizeBytes);
+        } else {
+            BSONObjBuilder unsetClauseBuilder;
+            unsetClauseBuilder.append(CollectionType::kMaxChunkSizeBytesFieldName, 0);
+            updateCmd.append("$unset", unsetClauseBuilder.obj());
+        }
         updatedFields++;
     }
 
@@ -533,6 +541,7 @@ void ShardingCatalogManager::configureCollectionBalancing(
         return;
     }
 
+    updateCmd.append("$set", setClauseBuilder.obj());
     const auto update = updateCmd.obj();
     {
         // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk splits, merges, and
@@ -574,6 +583,51 @@ void ShardingCatalogManager::configureCollectionBalancing(
         opCtx,
         {std::make_move_iterator(shardsIds.begin()), std::make_move_iterator(shardsIds.end())},
         nss,
+        executor);
+
+    Balancer::get(opCtx)->notifyPersistedBalancerSettingsChanged(opCtx);
+}
+
+void ShardingCatalogManager::applyLegacyConfigurationToSessionsCollection(OperationContext* opCtx) {
+    auto updateStmt = BSON("$unset" << BSON(CollectionType::kMaxChunkSizeBytesFieldName << 0));
+    // Take _kChunkOpLock in exclusive mode to prevent concurrent chunk splits, merges, and
+    // migrations
+    Lock::ExclusiveLock lk(opCtx, opCtx->lockState(), _kChunkOpLock);
+
+    withTransaction(opCtx,
+                    CollectionType::ConfigNS,
+                    [this, &updateStmt](OperationContext* opCtx, TxnNumber txnNumber) {
+                        const auto query = BSON(CollectionType::kNssFieldName
+                                                << NamespaceString::kLogicalSessionsNamespace.ns());
+                        const auto res = writeToConfigDocumentInTxn(
+                            opCtx,
+                            CollectionType::ConfigNS,
+                            BatchedCommandRequest::buildUpdateOp(CollectionType::ConfigNS,
+                                                                 query,
+                                                                 updateStmt,
+                                                                 false /* upsert */,
+                                                                 false /* multi */),
+                            txnNumber);
+                        const auto numDocsModified = UpdateOp::parseResponse(res).getN();
+                        uassert(ErrorCodes::NamespaceNotSharded,
+                                str::stream() << "Expected to match one doc for query " << query
+                                              << " but matched " << numDocsModified,
+                                numDocsModified == 1);
+
+                        bumpCollectionMinorVersionInTxn(
+                            opCtx, NamespaceString::kLogicalSessionsNamespace, txnNumber);
+                    });
+    const auto cm = uassertStatusOK(
+        Grid::get(opCtx)->catalogCache()->getShardedCollectionRoutingInfoWithRefresh(
+            opCtx, NamespaceString::kLogicalSessionsNamespace));
+    std::set<ShardId> shardsIds;
+    cm.getAllShardIds(&shardsIds);
+
+    const auto executor = Grid::get(opCtx)->getExecutorPool()->getFixedExecutor();
+    sharding_util::tellShardsToRefreshCollection(
+        opCtx,
+        {std::make_move_iterator(shardsIds.begin()), std::make_move_iterator(shardsIds.end())},
+        NamespaceString::kLogicalSessionsNamespace,
         executor);
 
     Balancer::get(opCtx)->notifyPersistedBalancerSettingsChanged(opCtx);
