jstests/sharding/cluster_chunks_resize_on_downgrade.js
@@ -27,6 +27,12 @@ assert.commandWorked(st.s.adminCommand({shardCollection: nss, key: {_id: 1}}));
 
 const bigString = 'X'.repeat(1024 * 1024);  // 1MB
 
+let getMaxChunkSizeForSessionsColl = () => {
+    return st.s.getDB("config")
+        .collections.findOne({_id: "config.system.sessions"})
+        .maxChunkSizeBytes;
+};
+
 // Insert 10MB of docs into the collection.
 const numDocs = 10;
 let bulk = coll.initializeUnorderedBulkOp();
@@ -37,12 +43,14 @@ assert.commandWorked(bulk.execute());
 
 const numChunksBeforeDowngrade = findChunksUtil.countChunksForNs(st.config, nss);
 
+assert.eq(200000, getMaxChunkSizeForSessionsColl());
 assert.commandWorked(db.adminCommand({setFeatureCompatibilityVersion: lastLTSFCV}));
 
 const numChunksAfterDowngrade = findChunksUtil.countChunksForNs(st.config, nss);
 jsTest.log("Number of chunks: before downgrade = " + numChunksBeforeDowngrade +
            ", after = " + numChunksAfterDowngrade);
 assert.eq(10, numChunksAfterDowngrade);
+assert.eq(undefined, getMaxChunkSizeForSessionsColl());
 
 st.stop();
 })();
